got it working..just need to fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -16,11 +16,12 @@
   margin-left: 5%; }
 
 .aboutSvg object {
-  margin-right: 5%;
-  height: 40px; }
+  display: inline; }
 
 .about {
-  display: inline; }
+  margin-right: 5%;
+  height: 40px;
+  width: 5%; }
 
 #page5 .headerName {
   margin-bottom: 2%; }
