--- a/sass/modules/_about.scss
+++ b/sass/modules/_about.scss
@@ -20,10 +20,11 @@
 
 
 .aboutSvg object {
-    margin-right: 5%;
-    height: 40px;
+    display: inline;
 }
 
 .about {
-    display: inline;
+    margin-right: 5%;
+    height: 40px;
+    width: 5%;
 }
